--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -146,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Relations (expanded)\n",
+    "### Keys\n",
     "A \"key\" is an attribute, or set of attributes (\"composite key\"), with unique values\n",
     "* If we decide vt_id is a key, then all rows must contain a unique vt_id value.\n",
     "\n",
@@ -177,12 +177,76 @@
     "    * A table can have one or more \"candidate\" keys\n",
     "    * Stay minimal on keys, particularly composites.\n",
     "\n",
-    "In a DBMS, each table has a \"primary\" key.\n",
+    "In a DBMS, each table has a \"primary\" key (PK).\n",
     "* Selected from candidate keys\n",
     "* When we designate an attribute as the primary key:\n",
     "    * DBMS enforces the uniqueness constraint\n",
     "    * Tells the DB how we are going to store the table in a file.\n",
-    "    \n"
+    "* CANNOT BE NULL\n",
+    "\n",
+    "__Foreign Keys__\n",
+    "\n",
+    "VehicleType\n",
+    "|vt_id|make|model|\n",
+    "|-----|----|-----|\n",
+    "|1|segway|Ninebot|\n",
+    "|2|Lime-S|Gen4| \n",
+    "\n",
+    "Vehicle\n",
+    "|v_id|vt_id|lat|lon|\n",
+    "|-----|----|-----|---|\n",
+    "|10|2|47.66|-114.407|\n",
+    "|15|1|47.66|-117.403|\n",
+    "|20|__4__|47.67|-117.404|\n",
+    "\n",
+    "There is a Vehicle instance with vt_id 4, which is not in the VehicleType table.\n",
+    "* \"Bad reference\"\n",
+    "\n",
+    "A foreign key (FK) protects us from bad references.\n",
+    "* FKs state that a column(s) value must come from a primary key in another table.\n",
+    "    * Vehicle.vt_id REFERENCES VehicleType.vt_id (is an FK to)\n",
+    "* Requiring Vehicle rows most refer to VehicleType rows (or else NULL)\n",
+    "* Enforcing FKs helps maintain __\"referencial integrity\"__\n",
+    "\n",
+    "__Check In:__ What are FKs for the following Tables?\n",
+    "\n",
+    "VehicleType(vt_id, make, model, default_plan)  \n",
+    "Vehicle(v_id, vt_id, lat, lon)  \n",
+    "PricingPlan(p_id, price_per_min, unlock_price)  \n",
+    "AllowedPlan(vt_id, p_id)  \n",
+    "* Vehicle.vt_id REFERENCES VehicleType.vt_id\n",
+    "* VehicleType.default_plan REFERENCES PricingPlan.p_id\n",
+    "* AllowedPlan.vt_id REFERENCES VehicleType.vt_id\n",
+    "* AllowedPlan.p_id REFERENCES PricingPlan.p_id\n",
+    "* VehicleType.(vt_id, default_plan) REFERENCES AllowedPlan.(vt_id, p_id)\n",
+    "\n",
+    "Summary:\n",
+    "1. A FK must reference the entire PK\n",
+    "* If r(__x__,__y__,z), S(__u__,x,y), & S has a FK to R \n",
+    "* then S.(x,y) references R.(x,y) is a possible FK\n",
+    "* but S.y refs R.y is not\n",
+    "2. A FK Value must contain the corresponding PK value or else be NULL\n",
+    "3. The DBMS enforces FKs\n",
+    "\n",
+    "Domains, PKs (& candidate keys), and FKs are examples of __\"integrity constraints\"__.\n",
+    "\n",
+    "__Surrogate Keys__\n",
+    "* Natural Keys\n",
+    "    * Happens most of the time, something plainly obvious as a key\n",
+    "* Artificial Keys\n",
+    "    * Typically used when there is no natural key or there is a large composite key\n",
+    "    * Creating a new key to reference in R from S (z instead of x1, x2, x3, and x4)\n",
+    "* Surrogate Keys\n",
+    "    * Artificial key that DBMS manages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Schema (Table) Diagram Basics\n",
+    "* Each relation is a separate named block with attributes\n",
+    "* Designate PKs, FKs, and draw connections for FKs"
    ]
   }
  ],
