--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -248,6 +248,145 @@
     "* Each relation is a separate named block with attributes\n",
     "* Designate PKs, FKs, and draw connections for FKs"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SQL\n",
+    "\n",
+    "SQL = Structured Query Language\n",
+    "\n",
+    "SQL is a declarative language, meaning we tell the computer what we want, not how to do it.\n",
+    "SQL is also \"command\" based\n",
+    "* CREATE TABLE\n",
+    "* SELECT\n",
+    "* DROP TABLE\n",
+    "SQL is case insensitive for commands, but case sensitive for Table names.\n",
+    "\n",
+    "__Database Server__\n",
+    "\n",
+    "Look at lecture notes for this part\n",
+    "\n",
+    "__Basic Create Table Syntax:__  \n",
+    "CREATE TABLE tablename (  \n",
+    "    attribute1 type1,  \n",
+    "    attribute2 type2,  \n",
+    "    attributeX typeX,  \n",
+    ");\n",
+    "\n",
+    "SELECT *(this means all) FROM tablename; - essentially prints the table  \n",
+    "INSERT INTO tablename VALUES (v1,v2,vX), (v1,v2,vX;) - inserts a row, can insert multiple rows in one insert statement by separating them with commas\n",
+    "\n",
+    "CREATE TABLE Pet(  \n",
+    "    pet_id INT,  \n",
+    "    pet_name TINYTEXT,  \n",
+    "    pet_type TINYTEXT  \n",
+    ");\n",
+    "\n",
+    "__Datatypes__\n",
+    "1. Integers\n",
+    "* INT - 4 BYTE\n",
+    "* MEDIUMINT - 3 BYTE\n",
+    "* SMALLINT - 2 BYTE\n",
+    "* TINYINT - 1 BYTE\n",
+    "* BIGINT - 8 BYTE  \n",
+    "Can add UNSIGNED\n",
+    "* pet_id INT UNSIGNED\n",
+    "2. \"Reals\"\n",
+    "* FLOAT\n",
+    "* DOUBLE\n",
+    "* FLOAT(M, D)\n",
+    "    * M = # of digits total\n",
+    "    * D = # of digits after the decimal point\n",
+    "* DECIMAL(M,D)\n",
+    "3. Bools & Bit Vectors\n",
+    "* BOOLEAN - 0,1\n",
+    "    * 0 = false\n",
+    "    * 1 = true\n",
+    "* BIT(M)\n",
+    "    * M = # of digits\n",
+    "    * BIT(2) - 00,01,10,11\n",
+    "4. Strings\n",
+    "* CHAR (N)\n",
+    "    * 0 <= N <= 255\n",
+    "* VARCHAR(N)\n",
+    "    * 0 <= N <= 65,535\n",
+    "* ENUM(x, y, z)\n",
+    "* BLOB (Binary Large Object)\n",
+    "    * a nice dump for whatever the fuck you want to put in a database. Images, whatever\n",
+    "* TEXT\n",
+    "* TINYTEXT \n",
+    "    * Up to 255\n",
+    "    * Shorthand for VARCHAR(255)\n",
+    "* YEAR\n",
+    "    * 'YYYY'\n",
+    "* DATE\n",
+    "    * 'YYYY:MM:DD'\n",
+    "* TIME\n",
+    "    * 'HH::MM::SS'\n",
+    "* DATETIME\n",
+    "    * 'YYYY:MM:DD HH:MM:SS'\n",
+    "\n",
+    "\n",
+    "__Examples__\n",
+    "\n",
+    "-- Comment as necessary!  \n",
+    "\n",
+    "-- Branch information\n",
+    "CREATE TABLE Branch (    \n",
+    "    branch_name VARCHAR(50),  \n",
+    "    address     VARCHAR(128) NOT NULL,  \n",
+    "    phone       CHAR(12),  \n",
+    "    PRIMARY KEY (branch_name)  \n",
+    "    UNIQUE (address)  \n",
+    ");\n",
+    "\n",
+    "-- Account information\n",
+    "CREATE TABLE Account (  \n",
+    "    acct_id INT UNSIGNED NOT NULL,  \n",
+    "    acct_name TINYTEXT NOT NULL,  \n",
+    "    main_branch VARCHAR(50) NOT NULL,  \n",
+    "    PRIMARY KEY (acct_id),  \n",
+    "    FOREIGN KEY (main_branch) REFERENCES Branch(branch_name)  \n",
+    ");  \n",
+    "\n",
+    "__Batch Loading__  \n",
+    "* INSERT INTO table VALUES (x,y,z), (a,b,c), (d,e,f)...;  NO  \n",
+    "* INSERT INTO table (a1,a2) VALUES (x,y), (a,b), (d,e) ....;  YES  \n",
+    "*  INSERT INTO table SET (a1=x, a2=y);  YES\n",
+    "\n",
+    "AUTO_INCREMENT can be used to increment an id as we insert rows\n",
+    "\n",
+    "CREATE TABLE pet (  \n",
+    "        pet_id INT UNSIGNED AUTO_INCREMENT,  \n",
+    "        pet_name TINYTEXT NOT NULL,  \n",
+    "        pet_type TINYTEXT NOT NULL DEFAULT 'dog',  \n",
+    "        PRIMARY KEY(pet_id)  \n",
+    "        );  \n",
+    "\n",
+    "* INSERT INTO pet(pet_name) VALUES ('fido'); Pet ID is 1  \n",
+    "* INSERT INT) pet(pet_name, pet_type) VALUES ('bill', 'cat); Pet ID is 2  \n",
+    "\n",
+    "__DROPTABLE__  \n",
+    "* Remove all rows: DELETE FROM account;  \n",
+    "* Remove a single row: DELETE FROM account WHERE acct_id = 101;  \n",
+    "* DELETE FROM account WHERE acct_id = 101 OR main_branch = 'spokane';  \n",
+    "\n",
+    "__Updating Tables__  \n",
+    "* Update every row in table:  UPDATE account SET main_branch = 'hillyard';  \n",
+    "* Update based where a value exists: UPDATE account SET main_branch = 'hillyard' WHERE main_branch = 'central';  \n",
+    "\n",
+    "CREATE TABLE loan(  \n",
+    "    acct_id INT UNSIGNED;  \n",
+    "    barcode INT UNSIGNED;  \n",
+    "    checkout_date DATE,  \n",
+    "    due_date DATE NOT NULL,  \n",
+    "    return_date DATE,  \n",
+    "    PK (acct_id, barcode, checkout_date),  \n",
+    "    FK (acct_id) REFS account(acct_id)  \n",
+    "    CONSTAINT valid_due_date CHECK (checkout_date < due_date), valid_return_date CHECK (return_date >= checkout_date), valid_barcode CHECK (barcode >= 1000 AND barcode <= 1000000000)"
+   ]
   }
  ],
  "metadata": {
